--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <div class="galeria">
         <div class="imgn">
             <a target="_blank" href="poco.jfif">
-                <img class="ovalada" src="imagenes/poco.jfif">
+                <img class="ovalada" src="poco.jfif">
             </a>
         </div>
                 <div class="texto">
@@ -20,7 +20,7 @@
     <div class="galeria">
         <div class="imgn">
             <a target="_blank" href="s24.png">
-                <img class="ovalada" src="imagenes/s24.png">
+                <img class="ovalada" src="s24.png">
             </a>
         </div>
                 <div class="texto">
@@ -30,7 +30,7 @@
     <div class="galeria">
         <div class="imgn">
             <a target="_blank" href="xiaomi.jpg">
-                <img class="ovalada" src="imagenes/xiaomi.jpg">
+                <img class="ovalada" src="xiaomi.jpg">
             </a>
         </div>
                 <div class="texto">
@@ -40,7 +40,7 @@
     <div class="galeria">
         <div class="imgn">
             <a target="_blank" href="iphone.jpg">
-                <img class="ovalada" src="imagenes/iphone.jpg">
+                <img class="ovalada" src="iphone.jpg">
             </a>
         </div>
                 <div class="texto">
@@ -50,7 +50,7 @@
     <div class="galeria">
         <div class="imgn">
             <a target="_blank" href="google.jpg">
-                <img class="ovalada" src="imagenes/google.jpg">
+                <img class="ovalada" src="google.jpg">
             </a>
         </div>
                 <div class="texto">
